--- a/style.css
+++ b/style.css
@@ -5,3 +5,36 @@ html {
 *, *::before, *::after {
     box-sizing: inherit;
 }
+
+body {
+    background: #ddd;  
+    background-image: url("image/linus-nilsson-WfKndo8Vv7w-unsplash.jpg");
+    background-size: cover;
+    padding: 50px 20px;    
+    font-family: 'Quicksand', sans-serif;    
+}
+
+.container {
+    width: 900px;    
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px 20px;    
+    background: rgba(221, 221, 221, 0.7);
+}
+
+.header {
+    text-align: center;
+}
+
+.paragraph {
+    text-align: center;
+}
+
+.main {
+    margin: 50px;
+}
+
+.footer {      
+    font-size: 14px; 
+    text-align: right;   
+}
