--- a/style.css
+++ b/style.css
@@ -17,24 +17,100 @@ body {
 .container {
     width: 900px;    
     max-width: 100%;
-    margin: 0 auto;
-    padding: 20px 20px;    
+    margin: 50px auto;  
+    padding: 20px 20px 0 20px;  
     background: rgba(221, 221, 221, 0.7);
 }
 
 .header {
+    font-size: 40px;
     text-align: center;
+    padding-top: 30px;
 }
 
-.paragraph {
-    text-align: center;
+.header__paragraph {
+    font-size: 20px;
+    text-align: center;    
 }
 
 .main {
-    margin: 50px;
+    margin: 50px 0;
+}
+
+.main__formFieldset {
+    width: 700px;    
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px 0;
+    font-size: 18px;
+}
+
+.main__formLegend {
+    font-size: 22px;
+    text-align: center;
+    padding: 0 10px;
+    text-transform: uppercase;
+}
+
+.main__formLabel {
+    font-size: 20px;
+}
+
+.main__formParagraph {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.main__formField {
+    height: 50px;
+    padding: 10px;
+    margin: 10px 0 10px 10px;    
+    border-radius: 5px;
+    border: 1px solid rgb(238, 238, 238);
+}
+
+.main__formField--currencyFrom {
+    margin: 10px 10px 10px 0;  
+}
+
+.button {
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+    border: 1px solid rgb(238, 238, 238);    
+    margin: 10px;        
+}
+
+.button--submit:hover {
+    background-color: rgb(42, 145, 52, 0.5);
+    border: none;            
+}
+
+.button--reset:hover {
+    background-color: rgba(255, 0, 0, 0.5);    
+    border: none;        
+}
+
+.button--submit:active {
+    color: rgb(238, 238, 238);    
+    background-color: rgb(42, 145, 52, 0.4);
+    border: none;            
+}
+
+.button--reset:active {
+    color: rgb(238, 238, 238);
+    background-color: rgba(255, 0, 0, 0.4);    
+    border: none;        
+}
+
+.main__paragraph {
+    text-align: center;
 }
 
 .footer {      
     font-size: 14px; 
-    text-align: right;   
+    font-weight: 300;
+    text-align: right; 
+    padding: 0 10px 5px 0;  
+    margin-top: 50px;
 }
