--- a/style.css
+++ b/style.css
@@ -26,12 +26,16 @@ body {
 .containerSecond {
     width: 900px;    
     max-width: 100%;
-    margin: 50px auto;  
+    margin: 0 auto;  
     padding: 20px 20px 0 20px;  
     background: rgba(221, 221, 221, 0.7);
 }
 
-.header {
+.section {
+    margin: 100px 0;
+}
+
+.header__title {
     font-size: 40px;
     text-align: center;    
 }
@@ -67,14 +71,14 @@ body {
 .calculator__formField {
     height: 50px;
     padding: 10px;
-    margin: 10px 0 10px 10px;    
+    margin: 10px 0;    
     border-radius: 5px;
     border: 1px solid rgb(238, 238, 238);
 }
 
-.calculator__formField--currencyFrom {
+/* .calculator__formField--currencyFrom {
     margin: 10px 10px 10px 0;  
-}
+} */
 
 .button {
     height: 40px;
@@ -85,7 +89,7 @@ body {
 }
 
 .button--submit:hover {
-    background-color: rgb(42, 145, 52, 0.5);
+    background-color: rgba(65, 180, 250, 0.5);
     border: none;            
 }
 
@@ -96,7 +100,7 @@ body {
 
 .button--submit:active {
     color: rgb(238, 238, 238);    
-    background-color: rgb(42, 145, 52, 0.4);
+    background-color: rgb(65, 180, 250, 0.4);
     border: none;            
 }
 
@@ -108,6 +112,39 @@ body {
 
 .calculator__formResult {
     font-weight: bold;
+}
+
+.order__formList {
+    list-style: none;
+    text-align: left;
+}
+
+.order__formLabel {
+    display: inline-block;
+    width: 200px;
+    text-align: right;
+    font-size: 18px;
+    padding: 0;
+}
+
+.order__formField {
+    width: 400px;
+    max-width:100%;
+    padding: 5px;
+    margin: 10px 0;    
+    border-radius: 5px;
+    border: 1px solid rgb(238, 238, 238);
+}
+
+.button--order:hover {
+    background-color: rgb(42, 145, 52, 0.5);
+    border: none;            
+}
+
+.button--order:active {
+    color: rgb(238, 238, 238);    
+    background-color: rgb(42, 145, 52, 0.4);
+    border: none;            
 }
 
 .footer {      
