--- a/css/container.css
+++ b/css/container.css
@@ -1,7 +1,7 @@
 .container {
-    width: 900px;    
-    max-width: 100%;
-    margin: 0 auto;  
+    flex-basis: 800px;    
+    max-width: 100%;  
+    margin: 0 20px;  
     padding: 20px 20px 0 20px;  
     background: rgba(221, 221, 221, 0.7);
 }
