--- a/css/calculator.css
+++ b/css/calculator.css
@@ -3,14 +3,14 @@
 }
 
 .calculator__formFieldset {
-    width: 700px;    
+    width: 700px;
     max-width: 100%;
     margin: 50px auto;
-    padding: 20px 0;    
+    padding: 20px 0;
 }
 
 .calculator__formLegend {
-    font-size: 24px;    
+    font-size: 24px;
     padding: 0 10px;
     text-transform: uppercase;
 }
@@ -22,7 +22,7 @@
 .calculator__formField {
     height: 50px;
     padding: 10px;
-    margin: 10px 0;    
+    margin: 10px 0;
     border-radius: 5px;
     border: 1px solid rgb(238, 238, 238);
 }
@@ -31,33 +31,34 @@
     height: 40px;
     width: 200px;
     border-radius: 5px;
-    border: 1px solid rgb(238, 238, 238);    
-    margin: 10px;  
-    font-size: 18px;      
+    border: 1px solid rgb(238, 238, 238);
+    margin: 10px;
+    font-size: 18px;
 }
 
 .button--submit:hover {
     background-color: rgba(65, 180, 250, 0.5);
-    border: none;            
+    border: none;
 }
 
 .button--reset:hover {
-    background-color: rgba(255, 0, 0, 0.5);    
-    border: none;        
+    background-color: rgba(255, 0, 0, 0.5);
+    border: none;
 }
 
 .button--submit:active {
-    color: rgb(238, 238, 238);    
+    color: rgb(238, 238, 238);
     background-color: rgb(65, 180, 250, 0.4);
-    border: none;            
+    border: none;
 }
 
 .button--reset:active {
     color: rgb(238, 238, 238);
-    background-color: rgba(255, 0, 0, 0.4);    
-    border: none;        
+    background-color: rgba(255, 0, 0, 0.4);
+    border: none;
 }
 
-.calculator__paragraph {
+.calculator__resultField {
     font-size: 24px;
+    height: 100px;
 }
